hphp/test/slow/hashbang_regression.php.expectf
Fatal error: Encountered unexpected token `main_hashbang_regression`. in %s/test/slow/hashbang_regression.php on line 6
